--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,14 +20,14 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Sprites/", "res://Scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Sprites/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/enemy.tscn", "res://Scenes/seashell.tscn")
+open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/enemy.tscn", "res://Scenes/level0.tscn", "res://Scenes/seashell.tscn", "res://Scenes/player.tscn", "res://Scenes/terrain.tscn", "res://Scenes/view.tscn")
 current_scene="res://Scenes/root.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
