--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -25,7 +25,6 @@ Area2D:scale=true
 CollisionShape2D:scale=false
 Sprite2D:scale=true
 TileMap:scale=true
-StaticBody2D:scale=true
 Camera2D:zoom=true
 Camera2D:scale=true
 Control:scale=true
@@ -43,4 +42,4 @@ last_selected_language="C#"
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.464743, 0.0301083, 0.921743, 1, 0.786259, 0.72685, 0.999595, 1, 0.711911, 0.467587, 0.35903, 0.42, 0.618105, 0.520174, 0.359068, 0.42, 0.619608, 0.521569, 0.360784, 1, 0.31156, 0.559363, 0.772521, 1, 0.309804, 0.560784, 0.772549, 0.341176, 0.309804, 0.560784, 0.772549, 0.486275, 0.309804, 0.560784, 0.772549, 0.631373)
+recent_presets=PackedColorArray(0.619608, 0.521569, 0.360784, 1, 0.31156, 0.559363, 0.772521, 1, 0.309804, 0.560784, 0.772549, 0.341176, 0.309804, 0.560784, 0.772549, 0.486275, 0.309804, 0.560784, 0.772549, 0.631373, 1, 0.305548, 0.489032, 1, 0.988957, 0.988957, 0.988957, 1, 1, 1, 1, 1, 0, 0, 0, 1)
