--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -52,8 +52,8 @@ selected_shader=""
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
-log_filter_3=true
+log_filter_1=false
+log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
