--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,14 +12,14 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=540
+dock_hsplit_2=237
 dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainMenu.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Sprites/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/enemy.tscn", "res://Scenes/level0.tscn", "res://Scenes/seashell.tscn", "res://Scenes/player.tscn", "res://Scenes/terrain.tscn", "res://Scenes/view.tscn")
-current_scene="res://Scenes/root.tscn"
+open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/enemy.tscn", "res://Scenes/level0.tscn", "res://Scenes/seashell.tscn", "res://Scenes/player.tscn", "res://Scenes/terrain.tscn", "res://Scenes/view.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/options.tscn")
+current_scene="res://Scenes/options.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://enemy.cs", "res://MainMenu.cs", "res://options.cs", "res://player.gd", "res://seashell.cs", "res://View.cs"]
+selected_script="res://options.cs"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
