--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainMenu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Sprites/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Sprites/", "res://Scenes/", "res://Scenes/Seashell/", "res://Scenes/Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/enemy.tscn", "res://Scenes/level0.tscn", "res://Scenes/seashell.tscn", "res://Scenes/player.tscn", "res://Scenes/terrain.tscn", "res://Scenes/view.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/options.tscn")
-current_scene="res://Scenes/options.tscn"
+open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/terrain.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/options.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Seashell/seashell.tscn")
+current_scene="res://Scenes/Seashell/seashell.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://enemy.cs", "res://MainMenu.cs", "res://options.cs", "res://player.gd", "res://seashell.cs", "res://View.cs"]
-selected_script="res://options.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
@@ -47,13 +47,3 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=false
-log_filter_3=false
-log_filter_4=true
-collapse=false
-show_search=true
