--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/terrain.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/options.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Seashell/seashell.tscn")
-current_scene="res://Scenes/Seashell/seashell.tscn"
+current_scene="res://Scenes/root.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
