--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/options.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menu/options.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Sprites/", "res://Scenes/", "res://Scenes/Seashell/", "res://Scenes/Player/", "res://Scenes/Menu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/terrain.tscn", "res://Scenes/MainMenu.tscn", "res://Scenes/options.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Seashell/seashell.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Menu/options.tscn")
-current_scene="res://Scenes/options.tscn"
+current_scene="res://Scenes/Menu/options.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
