--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -34,6 +34,7 @@ VBoxContainer:scale=true
 ProgressBar:scale=true
 MultiNodeEdit:scale=true
 Label:scale=true
+StaticBody2D:scale=true
 
 [dialog_bounds]
 
