--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,17 +19,17 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/options.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Sprites/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/game_over.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/Sprites/", "res://Scenes/", "res://Scenes/Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Seashell/seashell.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options.tscn", "res://Scenes/Player/player.tscn")
-current_scene="res://Scenes/Player/player.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Seashell/seashell.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/game_over.tscn")
+current_scene="res://Scenes/game_over.tscn"
+center_split_offset=-576
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
