--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,12 +32,12 @@ current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=-576
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scenes/Player/player.gd"]
+selected_script="res://Scenes/Player/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
