added new tile map

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -35,6 +35,8 @@ ProgressBar:scale=true
 MultiNodeEdit:scale=true
 Label:scale=true
 StaticBody2D:scale=true
+CanvasLayer:scale=true
+TextureRect:scale=true
 
 [dialog_bounds]
 
@@ -48,4 +50,4 @@ last_selected_language="C#"
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.619608, 0.521569, 0.360784, 1, 0.31156, 0.559363, 0.772521, 1, 0.309804, 0.560784, 0.772549, 0.341176, 0.309804, 0.560784, 0.772549, 0.486275, 0.309804, 0.560784, 0.772549, 0.631373, 1, 0.305548, 0.489032, 1, 0.988957, 0.988957, 0.988957, 1, 1, 1, 1, 1, 0, 0, 0, 1)
+recent_presets=PackedColorArray(0.309804, 0.560784, 0.772549, 0.341176, 0.309804, 0.560784, 0.772549, 0.486275, 0.309804, 0.560784, 0.772549, 0.631373, 1, 0.305548, 0.489032, 1, 0.988957, 0.988957, 0.988957, 1, 1, 1, 1, 1, 0.357432, 0.389932, 0.366631, 1, 0.0827414, 0.0827414, 0.0827414, 1, 0, 0, 0, 1)
