--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="G:/GoDot/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
+executable_path="/Applications/Godot_mono.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 tile_snap_option=0
 tile_snap_subdiv=4.0
