--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 62,
-"scroll_position": 62.0,
+"scroll_position": 35.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -24,4 +24,32 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/game_over.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://Scenes/options.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
 }
