--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/options.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Menu/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menu/MainMenu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Menu/", "res://Scenes/Enemies/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Collectibles/seashell.tscn", "res://Scenes/options.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/game_over.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://obstacleSpawner.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/Collectibles/collectibleSpawner.tscn")
-current_scene="res://Scenes/Player/player.tscn"
+open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Collectibles/seashell.tscn", "res://Scenes/options.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/game_over.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://obstacleSpawner.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://border.tscn")
+current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=-576
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/game_over.cs", "res://Scenes/options.cs", "res://Scenes/Player/player.gd"]
-selected_script="res://Scenes/options.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
