--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,37 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"ProgressBar",
+"class": &"CooldownBar",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/cooldown_bar.gd"
+}, {
+"base": &"State",
+"class": &"DeathState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/PlayerStates/death_state.gd"
+}, {
+"base": &"State",
+"class": &"IdleState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/PlayerStates/idle_state.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/state.gd"
+}, {
+"base": &"Node",
+"class": &"StateMachine",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/state_machine.gd"
+}, {
+"base": &"State",
+"class": &"WalkingState",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/PlayerStates/walking_state.gd"
+}])
