--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Player/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/root.tscn", "res://Scenes/level0.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Collectibles/seashell.tscn", "res://Scenes/options.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/game_over.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/obstacleSpawner.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://border.tscn")
-current_scene="res://Scenes/Player/player.tscn"
-center_split_offset=-288
+current_scene="res://Scenes/level0.tscn"
+center_split_offset=-280
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Enemies/enemy.cs", "res://Scenes/game_over.cs", "res://Scenes/Player/player.gd", "res://Scenes/Collectibles/seashell.cs", "res://Scripts/state_machine.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
-selected_script="res://Scenes/Player/PlayerStates/walking_state.gd"
+open_scripts=["res://Scenes/Collectibles/collectibleSpawner.cs", "res://Scenes/Player/PlayerStates/death_state.gd", "res://Scenes/Enemies/enemy.cs", "res://Scenes/game_over.cs", "res://Scenes/Player/PlayerStates/idle_state.gd", "res://Scenes/Player/player.gd", "res://Scenes/Collectibles/seashell.cs", "res://Scripts/state.gd", "res://Scripts/state_machine.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
+selected_script="res://Scenes/Collectibles/collectibleSpawner.cs"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
