--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,19 +19,19 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://TempResources/16x16/Sprites/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Sprites/", "res://Scenes/Player/", "res://Scenes/Enemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Enemies/jellyfish.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://Scenes/", "res://Scenes/Menu/", "res://Scenes/Enemies/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/enemy.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/level0.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/level0.tscn", "res://Scenes/root.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Enemies/jellyfish.tscn")
+current_scene="res://Scenes/Enemies/jellyfish.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
