--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,6 +17,18 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Player/PlayerStates/idle_state.gd"
 }, {
+"base": &"Resource",
+"class": &"Inventory",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Inventory/inventory.gd"
+}, {
+"base": &"Resource",
+"class": &"InventoryItem",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Inventory/invetoryItem.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
