--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Menu/MainMenu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Enemies/enemyStats.cs")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://Scenes/", "res://Scenes/Menu/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Menu/MainMenu.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn")
+current_scene="res://Scenes/Collectibles/heart.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
