--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Enemies/enemyStats.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://Scenes/", "res://Scenes/Menu/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Menu/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/", "res://fonts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn")
-current_scene="res://Scenes/Collectibles/heart.tscn"
+open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/level0.tscn", "res://Scenes/root.tscn", "res://Scenes/Player/player.tscn", "res://shader.tscn")
+current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -44,6 +44,6 @@ list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=[]
-split_offset=0
-selected_shader=""
+open_shaders=["res://Scenes/Player/player.gdshader"]
+split_offset=400
+selected_shader="res://Scenes/Player/player.gdshader"
