--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,20 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/Collectibles/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/obstacleSpawner.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Enemies/", "res://Scenes/Collectibles/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/level0.tscn", "res://Scenes/root.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/shader.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Collectibles/collectibleSpawner.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Enemies/enemySpawner.tscn", "res://Scenes/terrain.tscn", "res://Scenes/Collectibles/heart.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/level0.tscn", "res://Scenes/root.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/shader.tscn", "res://Scenes/Collectibles/seashell.tscn", "res://Scenes/obstacleSpawner.tscn")
+current_scene="res://Scenes/obstacleSpawner.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=14
 
 [ScriptEditor]
 
@@ -44,6 +44,6 @@ list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=["res://Scripts/shader.gdshader"]
+open_shaders=["res://Scripts/shader.gdshader", "res://Scenes/Player/player.gdshader"]
 split_offset=400
-selected_shader="res://Scripts/shader.gdshader"
+selected_shader="res://Scenes/Player/player.gdshader"
