fixed projectile y-sort

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://TempResources/deepDiver.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/root.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://Scenes/", "res://Scenes/Menu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Player/player.tscn", "res://Scenes/Attacks/AttackSuper.tscn")
-current_scene="res://Scenes/Player/player.tscn"
+open_scenes=PackedStringArray("res://Scenes/Player/player.tscn", "res://Scenes/Attacks/AttackSuper.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/root.tscn")
+current_scene="res://Scenes/root.tscn"
 center_split_offset=-487
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Attacks/attack_superclass.gd", "res://Scenes/Collectibles/collectibleSpawner.cs", "res://Scenes/Enemies/enemySpawner.cs", "res://Scenes/Collectibles/heart.cs", "res://Scenes/Enemies/jellyfish.cs", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/obstacleSpawner.cs", "res://Scenes/Player/player.gd", "res://Scenes/proc_gen.cs", "res://Scenes/Collectibles/seashell.cs", "res://Scenes/Player/PlayerStates/walking_state.gd"]
-selected_script="res://Scenes/Player/player.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=140
 list_split_offset=0
