--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Audio/Audio.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://Scripts/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Menu/", "res://Scenes/Levels/", "res://fonts/", "res://Audio/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/options.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Menu/", "res://Scenes/Levels/", "res://language/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/cave.tscn", "res://Scenes/shader.tscn", "res://Scenes/ocean_shader.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Audio/bg_muisc.tscn", "res://Scenes/pause_menu.tscn", "res://Scenes/options(remake).tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/cave.tscn", "res://Scenes/shader.tscn", "res://Scenes/ocean_shader.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1_gen.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/options(remake).tscn")
+current_scene="res://Scenes/Player/player_manager.tscn"
 center_split_offset=-575
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Audio/Audio.gd", "res://Scenes/cave.gd", "res://language/language_setting.gd", "res://Scenes/Levels/level1Gen.cs", "res://Scenes/Levels/level_2_gen.cs", "res://Scenes/Menu/MainMenu.cs", "res://Audio/master_slider.gd", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/player_manager.gd", "res://Scenes/Levels/proc_gen.cs", "res://Scripts/Video.cs"]
-selected_script="res://Scenes/Menu/MainMenu.cs"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=150
 list_split_offset=0
