fixed pause and restart

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/pause_menu.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Levels/level_1.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Menu/", "res://Scenes/Levels/", "res://language/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/cave.tscn", "res://Scenes/shader.tscn", "res://Scenes/ocean_shader.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1_gen.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/options(remake).tscn", "res://Scenes/scene_transition.tscn", "res://Scenes/pause_menu.tscn")
-current_scene="res://Scenes/Levels/level_1.tscn"
+current_scene="res://Scenes/Menu/MainMenu.tscn"
 center_split_offset=-575
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scenes/pause_menu.gd"]
+selected_script="res://Scenes/pause_menu.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
