--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/pause_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://TempResources/Something being hit - Sound Effect.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Levels/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options(remake).tscn", "res://language/language_setting.tscn", "res://Scenes/pause_menu.tscn")
-current_scene="res://Scenes/pause_menu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options(remake).tscn", "res://language/language_setting.tscn", "res://Scenes/pause_menu.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player.tscn")
+current_scene="res://Scenes/Player/player.tscn"
 center_split_offset=-487
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://language/language_setting.gd", "res://Scenes/pause_menu.gd"]
-selected_script="res://Scenes/pause_menu.gd"
+open_scripts=["res://language/language_setting.gd", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/player_manager.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
+selected_script="res://Scenes/Player/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
