Projectiles damage enemies, enemies defeatable

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Player/player.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Attacks/attack_superclass.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Player/", "res://Scenes/Attacks/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Levels/level_1.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player.tscn")
-current_scene="res://Scenes/Player/player.tscn"
-center_split_offset=-487
+open_scenes=PackedStringArray("res://Scenes/Levels/level_1.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Enemies/jellyfish.tscn")
+current_scene="res://Scenes/Enemies/jellyfish.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Player/PlayerStates/idle_state.gd", "res://language/language_setting.gd", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/player_manager.gd", "res://Scripts/state_machine.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
-selected_script="res://Scenes/Player/player.gd"
+open_scripts=["res://Scenes/Attacks/attack_superclass.gd", "res://Scenes/Enemies/enemyStats.cs", "res://Scenes/Player/PlayerStates/idle_state.gd", "res://Scenes/Enemies/jellyfish.cs", "res://language/language_setting.gd", "res://Scenes/Menu/MainMenu.cs", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/player_manager.gd", "res://Scripts/state_machine.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
+selected_script="res://Scenes/Enemies/jellyfish.cs"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
