updated sfx dodge

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 42,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 94,
+"row": 77,
 "scroll_position": 77.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -95,10 +95,7 @@ state={
 "selection": false,
 "syntax_highlighter": "Standard"
 }
-
-res://Scenes/Enemies/jellyfish.cs]
-
-state={
+"res://Scenes/Enemies/jellyfish.cs]state"={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
 "column": 41,
@@ -137,8 +134,6 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
-
-
 
 [res://Scenes/Player/player_manager.gd]
 
@@ -211,5 +206,19 @@ state={
 "selection_from_line": 55,
 "selection_to_column": 90,
 "selection_to_line": 57,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/pause_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
