--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/pause_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://TempResources/16x16/", "res://TempResources/16x16/Tilesets/", "res://Scripts/", "res://Scenes/", "res://Scenes/Player/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options(remake).tscn", "res://language/language_setting.tscn", "res://Scenes/pause_menu.tscn")
-current_scene="res://Scenes/Menu/MainMenu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/options(remake).tscn", "res://language/language_setting.tscn", "res://Scenes/pause_menu.tscn", "res://Scenes/Player/player.tscn")
+current_scene="res://Scenes/Player/player.tscn"
 center_split_offset=-487
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://Scenes/Menu/MainMenu.cs", "res://Scenes/pause_menu.gd", "res://Scenes/Player/player.gd"]
+selected_script="res://Scenes/Player/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
