--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,7 +3,7 @@ list=Array[Dictionary]([{
 "class": &"Attack",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scenes/Attacks/attack_superclass.gd"
+"path": "res://Scenes/Weapons/projectile.gd"
 }, {
 "base": &"ProgressBar",
 "class": &"CooldownBar",
@@ -35,6 +35,24 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Inventory/invetoryItem.gd"
 }, {
+"base": &"Node2D",
+"class": &"MachineGun",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Weapons/Types/machine_gun.gd"
+}, {
+"base": &"Node2D",
+"class": &"Shotgun",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Weapons/Types/shotgun.gd"
+}, {
+"base": &"Node2D",
+"class": &"Sniper",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Weapons/Types/sniper.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
@@ -52,4 +70,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Player/PlayerStates/walking_state.gd"
+}, {
+"base": &"Node2D",
+"class": &"WeaponBase",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Weapons/weapons_base.gd"
 }])
