--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Weapons/projectile.gd"
 }, {
+"base": &"Node2D",
+"class": &"Cannon",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Weapons/Types/cannon.gd"
+}, {
 "base": &"ProgressBar",
 "class": &"CooldownBar",
 "icon": "",
