--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -82,4 +82,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Weapons/weapons_base.gd"
+}, {
+"base": &"Node",
+"class": &"levelManager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Levels/level_manager.gd"
 }])
