PlayerManager autoload(not in use)

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -88,4 +88,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Levels/level_manager.gd"
+}, {
+"base": &"Node",
+"class": &"playerManaager",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/player_manager.gd"
 }])
