--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/pause_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TempResources/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Player/PlayerStates/", "res://Scenes/Enemies/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Weapons/Types/", "res://Scenes/Player/PlayerStates/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/cave.tscn", "res://Scenes/game_over.tscn", "res://Scenes/pause_menu.tscn")
-current_scene="res://Scenes/pause_menu.tscn"
+open_scenes=PackedStringArray("res://Scenes/Menu/MainMenu.tscn", "res://Scenes/Enemies/jellyfish.tscn", "res://Scenes/Weapons/weapon_base.tscn", "res://Scenes/Weapons/Types/machine_gun.tscn", "res://Scenes/Player/player.tscn", "res://Scenes/Levels/level_1.tscn", "res://Scenes/Levels/level_2.tscn", "res://Scenes/Levels/level_3.tscn", "res://Scenes/Levels/proc_gen.tscn", "res://Scenes/Map/tile_map.tscn", "res://Scenes/Player/player_manager.tscn", "res://Scenes/Map/cave.tscn", "res://Scenes/Menu/game_over.tscn", "res://Scenes/Menu/pause_menu.tscn", "res://Scenes/shader.tscn", "res://Scenes/Levels/level_2_gen.tscn", "res://Scenes/scene_transition.tscn")
+current_scene="res://Scenes/shader.tscn"
 center_split_offset=-252
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=0
@@ -36,7 +36,7 @@ selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=[]
+open_scripts=["res://Scenes/Player/cam.gd", "res://Scenes/Player/player.gd", "res://Scenes/Player/PlayerStates/walking_state.gd"]
 selected_script=""
 open_help=[]
 script_split_offset=140
