--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,44 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 38.0,
+"row": 92,
+"scroll_position": 92.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
 
 [res://Scenes/Menu/MainMenu.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
-[res://Scenes/game_over.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
-[res://Scenes/obstacleSpawner.cs]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -185,22 +157,8 @@ state={
 "column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
-"scroll_position": 73.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scenes/cave.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 24,
-"scroll_position": 24.0,
+"row": 21,
+"scroll_position": 21.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -217,20 +175,6 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
-}
-
-[res://Scenes/pause_menu.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
 }
 
 [res://Scenes/Weapons/projectile.gd]
@@ -367,8 +311,50 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 5.0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Map/cave.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 24.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Map/obstacleSpawner.cs]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "Standard"
+}
+
+[res://Scenes/Menu/pause_menu.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
