rewrote spawner + dyanmic entity spawn num

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -94,4 +94,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/Player/player_manager.gd"
+}, {
+"base": &"Node2D",
+"class": &"spawner",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Map/spawner.gd"
 }])
