--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -40,20 +40,6 @@ state={
 "syntax_highlighter": "Standard"
 }
 
-[res://Scenes/Collectibles/collectibleSpawner.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
 [res://Scenes/Collectibles/heart.cs]
 
 state={
@@ -77,20 +63,6 @@ state={
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Standard"
-}
-
-[res://Scenes/Enemies/enemySpawner.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 33,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
 }
 
 [res://language/language_setting.gd]
@@ -331,20 +303,6 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scenes/Map/obstacleSpawner.cs]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 0,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "Standard"
-}
-
 [res://Scenes/Menu/pause_menu.gd]
 
 state={
@@ -353,8 +311,50 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
+"row": 14,
+"scroll_position": 14.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Map/spawner.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 39,
+"scroll_position": 39.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Map/enemy_spawner.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 11.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/Map/collectible_spawner.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 14,
+"scroll_position": 14.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
