Added new upgrade potential and updating player mechanics

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -47,6 +47,18 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Weapons/Types/machine_gun.gd"
 }, {
+"base": &"CharacterBody2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/player.gd"
+}, {
+"base": &"Node",
+"class": &"PlayerUpgrader",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Player/player_upgrader.gd"
+}, {
 "base": &"Node2D",
 "class": &"Shotgun",
 "icon": "",
