Added experience, yet to add upgrade screen
I don't like this implementation, but it is way too much work to go back and try to implement it on enemy defeat (C# makes it harder)

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/Player/PlayerStates/death_state.gd"
 }, {
+"base": &"Area2D",
+"class": &"ExperienceOrb",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Collectibles/experience_orb.gd"
+}, {
 "base": &"Node2D",
 "class": &"FiniteStateMachine",
 "icon": "",
